Meu projeto em HTML

--- a/tabela.html
+++ b/tabela.html
@@ -13,15 +13,15 @@
 <th>Preços</th>
 <th>Disponibilidade</td>
 <tr>
-<td>Notebook games<\<td>
+<td>Notebook games</tr>
 <td>R$ 5.000</td>
+<td>Dispovivel</td>
 <td>Mouse sem Fio</td>
-<td>R$ 150,00</td>
+<td>R$ 150.00</td>
 <td>Em estoque</td>
-</tr>
 <tr>
 <td>Teclado Mecânico</td>
-<td>R$ 350,00</td>
+<td>R$ 350.00</td>
 <td>Esgotado</td>
 </tr>
 
