Meu projeto em HTML

--- a/tabela.html
+++ b/tabela.html
@@ -11,15 +11,16 @@
 <tr>
 <th>Produto</th>
 <th>Preços</th>
-<th>Disponibilidade</td>
+<th>Disponibilidade</th>
 <tr>
-<td>Notebook games</tr>
+<td>Notebook games</td>
 <td>R$ 5.000</td>
 <td>Dispovivel</td>
+</tr>
 <td>Mouse sem Fio</td>
 <td>R$ 150.00</td>
 <td>Em estoque</td>
-<tr>
+</tr>
 <td>Teclado Mecânico</td>
 <td>R$ 350.00</td>
 <td>Esgotado</td>
